--- a/styles/graph-grid.css
+++ b/styles/graph-grid.css
@@ -3,6 +3,7 @@
 	position: relative;
 	display: inline-block;
 	width: 563px;
+	background: url(../images/slide-number.png) no-repeat 10% 50%;
 }
 
 .grid li:first-child{
@@ -34,18 +35,18 @@
 }
 
 .legend li:nth-child(1){
-	list-style-image: url(../list-bullets-images/all-exelianz.png);
+	list-style-image: url(../images/all-exelianz.png);
 }
 
 .legend li:nth-child(2){
-	list-style-image: url(../list-bullets-images/xel-anz.png);
+	list-style-image: url(../images/xel-anz.png);
 }
 
 .legend li:nth-child(3){
-	list-style-image: url(../list-bullets-images/all-xel-anz-cs.png);
+	list-style-image: url(../images/all-xel-anz-cs.png);
 }
 
 .legend li:nth-child(4){
-	list-style-image: url(../list-bullets-images/all-xel-anz-monotherapy.png);
+	list-style-image: url(../images/all-xel-anz-monotherapy.png);
 }
 
