--- a/styles/axis-scale.css
+++ b/styles/axis-scale.css
@@ -7,36 +7,88 @@
 	width: 45px;
 	font-size: 12px;
 	height: 221px;
-	margin-bottom: 25px;
 	text-align: center;	
 }
 
 .y-axis-values{
-	float: left;
-	margin-top: -7px;
+	float:left;
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
 	padding-right: 5px;
 }
 
 .y-axis-values li{
-	height: 42px;
-	text-align: right;
+	position: relative;
+	flex: 1;
+	display: flex;
+	align-items: center;
+    justify-content: flex-end;
 }
+
+.y-axis-values li:after{
+	content: "";
+	position: absolute;
+	bottom: 50%;
+	left: 120%;
+	width: 563px;
+	height: 0;
+	border-top: 1px dashed #dee0e0;
+}
+
+.y-axis-values li:last-child:after{
+	border-top: 2px solid #bdd0a0;
+}
+
 .y-axis-values li:last-child{
 	height: auto;
 }
 
 .x-axis-values {
-	position: relative;
 	white-space: nowrap;
 }
 
 .x-axis-values li{ 
+	display: inline-block;
 	margin-right: 25px;
 	text-align: center;
 	width: 45px;
-	display: inline-block;
 }
 
 .x-axis-values li:nth-last-child(2){
 	margin-right:0;
+}
+
+.tooltiptext {
+    visibility: hidden;
+    font-size: 12px;
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 15%;
+    right: 120%;
+    opacity: 0;
+    transition: opacity 1s;
+}
+
+.tooltiptext:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 100%;
+    margin-top:-5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent #555 transparent transparent ;
+}
+
+.y-axis-values li:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
 }
