--- a/styles/global-style.css
+++ b/styles/global-style.css
@@ -10,6 +10,7 @@ body{
 	height: 100%;
 	font-family: Arial;
 }
+
 li{
 	list-style-type: none;
 }
@@ -20,5 +21,8 @@ li{
 
 .graph-wrapper{
 	position: relative;
-	display: inline-block;
+}
+
+.flex-wrapper{
+	display: flex;
 }
